[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sorts"
path = "src/sorts.rs"

[[bin]]
name = "two_sums"
path = "src/two_sums.rs"

[[bin]]
name = "leetcode_1"
path = "src/leetcode_1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
