[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sorts"
path = "src/sorts.rs"

[[bin]]
name = "two_sums"
path = "src/two_sums.rs"

[[bin]]
name = "linear_search"
path = "src/linear_search.rs"

[[bin]]
name = "leetcode_1"
path = "src/leetcode_1.rs"

[[bin]]
name = "leetcode_2"
path = "src/leetcode_2.rs"

[[bin]]
name = "leetcode_3"
path = "src/leetcode_3.rs"

[[bin]]
name = "leetcode_4"
path = "src/leetcode_4.rs"

[[bin]]
name = "leetcode_5"
path = "src/leetcode_5.rs"

[[bin]]
name = "leetcode_6"
path = "src/leetcode_6.rs"

[[bin]]
name = "leetcode_7"
path = "src/leetcode_7.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
